SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

#1522 Copying qualified Object names from the Object tree used to always double quote the names.
  Now it respects  the checkbox "Use double quotes for (") for qualifying"
  at menu File --> Global Preferences --> tab "SQL Scripts"

#1522 Object tree: New right mouse submenu "Save/restore selection"
  that offers several functions to save and restore Object tree selections.

Refactoring: The "SQL Scripts"-Plugin's functionality was moved to SQuirreL's core.
  The "SQL Scripts"-Plugin won't be shipped anymore
  and in case it is still found it is programmatically kept from being loaded.
  Users are advised to check their scripting preferences because previous preferences were lost.
  See menu File --> Global Preferences --> Tab "SQL Scripts".

Object tree: New right mouse menus in "Scripts" submenu:
  "Store selected tables' data in files" and "Create INSERT statements file from selected tables"

Graph Plugin: The standard format for saving Graphs (ER diagrams) as images is now PNG instead of JPG.

Graph Plugin:
  When a Graph (ER diagram) is renamed (using the right mouse menu or start button on the lower left)
  the current name is now suggested.

#1519 (in bugs): The caret/cursor position indicator at the lower right of a Session panel
  now also shows the caret/cursor's position in the current SQL if applicable.

Introduced Java 21 compatibility.

SQL Script Plugin: In analogy to the existing syntax to export a SQL result directly using the syntax
    @file '/tmp/customers.xlsx' SELECT * FROM customers
  one may now directly create an MS-Excel workbook file with multiple sheets using the following syntax:
    @msExcelWorkbook 'C:/tmp/out.xlsx'
    @sheet 'Orders' SELECT * FROM orders;