@@ -22,4 +22,4 @@ ShowDistinctValuesCtrl.emptyTable=Cannot show distinct values for empty table.
 
 ShowDistinctValuesDlg.distinctInColumnsInfo=If rows outnumber distinct values of a column <null> is displayed.
 
-DistinctValuesHolder.count.column.name=Frequency
+DistinctValuesUtil.count.column.name=Frequency
